# ray-tracing

./: .gitignore  CMakeLists.txt  camera.h  color.h  common.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  rt  sphere.h  vec3.h
